# RTv1

CLionProjects/rtv/: CMakeLists.txt  Makefile  RTv1  color.c  init.c  install.sh  intersection.c  main.c  other.c  plane.c  render.c  rtv.h  scene.c  scene1.c  scene2.c  scene3.c  scene4.c  usage.c  vectors.c
CLionProjects/rtv/downloads/SDL2/: Makefile  Makefile.rules  config.status  libtool  sdl2-config  sdl2-config.cmake  sdl2.pc
CLionProjects/rtv/downloads/SDL2_image/: Makefile  SDL2_image.pc  config.status  libSDL2_image.la  libtool  showimage
CLionProjects/rtv/downloads/SDL2_image/.deps/: IMG.Plo  IMG_ImageIO.Plo  IMG_bmp.Plo  IMG_jpg.Plo  IMG_lbm.Plo  IMG_pcx.Plo  IMG_png.Plo  IMG_pnm.Plo  IMG_svg.Plo  IMG_webp.Plo  IMG_xcf.Plo  IMG_xpm.Plo  IMG_xv.Plo  showimage.Po
CLionProjects/rtv/downloads/SDL2_image/.libs/: libSDL2_image.lai  showimage
CLionProjects/rtv/downloads/SDL2_image/.libs/libSDL2_image-2.0.0.dylib.dSYM/Contents/Resources/DWARF/: libSDL2_image-2.0.0.dylib
CLionProjects/rtv/libft/: Makefile  libft.h.gch  libft.h.gch-4d665388
